# dependeye

./: .gitignore  Cargo.toml  README.md  config.toml
app/: Cargo.toml
app/src/: main.rs
backend/: Cargo.toml
backend/migrations/: 001_initial_setup.sql
backend/src/: db.rs  github.rs  lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
scripts/: build.sh  start.sh
